# JAIR_cpp

./: .gitignore  README.md  alpha_divergence.py  kn-bandit.py  logs.tar.xz  ments.py  optimize-hyperparameters.py  rents.py  requirements.txt  run_experiment.py  uct.py  uctp.py  visualize-logs.py
c++/: CMakeLists.txt  main.cpp
c++/include/: discrete_environment.h  environment.h  random_utils.h  rollout_container.h  tree_search.h  tree_search_nodes.h  util.h
c++/include/envs/: copy.h  frozen_lake.h  frozen_lake_ext.h
c++/src/: discrete_environment.cpp  random_utils.cpp
c++/src/envs/: copy.cpp  frozen_lake.cpp  frozen_lake_ext.cpp
log-fl-standard/: log.txt
